ecmascript/parser/tests/test262-error-references/fail/143481afd6573e9b.js.stderr
error: Expected Comma, got Some(Dot)
 --> $DIR/tests/test262-parser/fail/143481afd6573e9b.js:1:18
  |
1 | function* a({e: a.b}) {}
  |                  ^

